<resources>
    <string name="app_name">Sqlite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add_name">Name</string>
    <string name="add_email">E-Mail Id</string>
    <string name="add_mobile">Mobile Number</string>
    <string name="add_male">Male</string>
    <string name="add_femail">Female</string>
    <string name="add_submit">Submit</string>
    <string name="add_reset">Reset</string>
</resources>
